# vividly_dash

./: .gitignore  pyproject.toml  requirements.txt
vividly_dash/: __main__.py  app.py  dashboard.py  settings.py  test_code.py  views.py
vividly_dash/services/: meta_ads.py
